# auto_nav

./: README.md
mission_control/: CMakeLists.txt  package.xml
mission_control/LAUNCH/: rover.launch  rover_definition.launch  start_navigation.launch  start_navigation_simulated.launch
mission_control/RVIZ/: robot_model.rviz  simulation.rviz
mission_control/XACRO/: QT1.gazebo  ilhuicamina_simplified.xacro
path_planning/: package.xml
path_planning/LAUNCH/: move_base.launch
path_planning/PARAMS/: common_params.yaml  global_params.yaml  minimal.yaml
sensor_drivers/: CMakeLists.txt  package.xml
sensor_drivers/camera/: stream_visualizer.py  zed_camera_node.py  zed_class.py
vision_processing/: CMakeLists.txt  package.xml
