<?xml version="1.0"?>
<package format="2">
  <name>mission_control</name>
  <version>0.0.0</version>
  <description>
  Nodos que integran y ejecutan rutinas de misión combinando la lectura de códigos ARUCO, 
  planificación de trayectorias, y detección de objetos, utilizando los módulos de sensores, 
  vision, y planificación de manera coordinada.
  </description>

  <maintainer email="gabriela.lomeli@alumnos.com.mx">Paola Gabriela Lomeli Barcena</maintainer>
  <license>TODO</license>

  <author email="gabriela.lomeli@alumnos.com.mx">Paola Gabriela Lomeli Barcena</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>hector_gazebo_plugins</build_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>


</package>
